[package]
name = "tor-primitive-types"
version = "0.1.0"
authors = ["Dennis Jackson <git@dennisjj.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.0"

# [derive_more]
# default-features = false
# features = ["from"]